# lorekeeper

./: .dockerignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  JUSTFILE.md  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml  pyrightconfig.json
docs/: PHASE2_API_REFERENCE.md  PHASE2_MIGRATION_GUIDE.md  PHASE2_USAGE_GUIDE.md
docs/phase2/: claim_truth_implementation.md  questions.md
lorekeeper/: __init__.py
lorekeeper-api/: .gitignore  .pre-commit-config.yaml  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART_QUEUE.md  README.md  TODO.md  docker-compose.yml  justfile  pyproject.toml  pyrightconfig.json  worker.py
lorekeeper-api/app/: config.py  main.py
lorekeeper-api/app/core/: config.py  exceptions.py
lorekeeper-api/app/db/: database.py  migrate.py  seed.py  seed_mythic_docs.py
lorekeeper-api/app/repositories/: assets.py  claims.py  sources.py
lorekeeper-api/app/routes/: api.py  assets.py  books.py  claims.py  documents.py  entities.py  mentions.py  retrieval.py  sources.py  worlds.py
lorekeeper-api/app/services/: asset_job_service.py  asset_response_builder.py  asset_s3_service.py  asset_worker_service.py  claim_extractor.py  claims.py  contradiction_detector.py  embedding.py  embedding_factory.py  job_consumer.py  job_producer.py  job_queue.py  retrieval.py  sources.py
lorekeeper-api/app/types/: __init__.py  embedding.py  job_queue.py
lorekeeper-api/app/utils/: asset_validation.py  datetime.py  hashing.py  ids.py  s3.py
lorekeeper-api/app/workers/: asset_generation_worker.py
lorekeeper-api/docs/: IMPLEMENTATION.md  JOB_QUEUE.md  PHASE2_MIGRATION_GUIDE.md  PHASE2_USAGE_GUIDE.md  db_uml.mermaid  llm.md
lorekeeper-api/docs/llm-instructions/: 001-assets
lorekeeper-api/docs/phase2/: claim_truth_implementation.md  questions.md
lorekeeper-api/lorekeeper/: main.py
lorekeeper-api/lorekeeper/db/: database.py  init.sql  seed.py  seed_mythic_docs.py
lorekeeper-api/lorekeeper/models/: __init__.py
lorekeeper-api/lorekeeper/routes/: __init__.py  claims.py  documents.py  entities.py  mentions.py  retrieval.py  worlds.py
lorekeeper-api/lorekeeper/services/: __init__.py  claim_extractor.py  contradiction_detector.py  (+1 more)
lorekeeper-api/sqlalchemy/: __init__.pyi
lorekeeper-api/tests/: e2e_test_assets.py  test_job_queue.py
lorekeeper/api/: config.py  main.py  schemas.py  utils.py
lorekeeper/db/: database.py  init.sql  migrate.py  models.py  seed.py  seed_mythic_docs.py  utils.py
lorekeeper/indexer/: chunker.py
lorekeeper/tests/: conftest.py  test_claim_endpoints.py  test_claim_extraction.py  test_claims.py  test_concurrent_operations.py  test_config.py  test_document_endpoints.py  test_entity_endpoints.py  test_entity_mentions.py  test_error_handling.py  test_indexer.py  test_lore_indexing.py  test_lore_retrieval.py  test_migrations.py  test_milestone_e.py  test_narrative_documents.py  test_retrieval_endpoints.py  test_retrieval_service.py  test_retrieval_truth_filtering.py  test_seeding.py  test_typing.py  test_world_endpoints.py
(+82 files in other folders)
